--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,14 @@
+# keisuke docker dotfiles
+#
+# ------------------------------------------------------
 # keybind(Space)
+# ------------------------------------------------------
 unbind C-b
 set -g prefix C-Space
 
+# ------------------------------------------------------
 # window-ui
+# ------------------------------------------------------
 set-option -g status-position top
 set-option -g status-left '#H:[#P]'
 set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
@@ -15,7 +21,9 @@ setw -g window-status-current-fg white
 setw -g window-status-current-bg red
 setw -g mode-keys vi
 
+# ------------------------------------------------------
 # move pain
+# ------------------------------------------------------
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -25,5 +33,7 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# ------------------------------------------------------
 # reload
+# ------------------------------------------------------
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
