--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,12 +13,10 @@ set-option -g status-position top
 set-option -g status-left '#H:[#P]'
 set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
 set-option -g status-interval 1
-set -g status-fg white
-set -g status-bg black
+set -g status-style fg=white,bg=black
 set -g default-terminal "screen-256color"
 set -sg escape-time 1
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
+setw -g window-status-current-style fg=white,bg=red
 setw -g mode-keys vi
 
 # ------------------------------------------------------
