--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -2,7 +2,7 @@ key_bindings:
   - { key: Space, mods: Control, chars: "\x00" } # avoid affection to tmux prefix
 
 selection:
-  semantic_escape_chars: "()[]{}<>|:=-/,\t\'\" "
+  semantic_escape_chars: "()[]{}<>|:=-/,.\t\'\" "
 
 # Colors (Solarized Dark)
 schemes:
