--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,8 @@
 # ------------------------------------------------------
 # keybind(Space)
 # ------------------------------------------------------
-unbind C-b
-set -g prefix C-Space
+# unbind C-b
+# set -g prefix C-Space
 
 # ------------------------------------------------------
 # window-ui
