--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,8 @@
 # ------------------------------------------------------
 # keybind(Space)
 # ------------------------------------------------------
-# unbind C-b
-# set -g prefix C-Space
+unbind C-b
+set -g prefix C-Space
 
 # ------------------------------------------------------
 # window-ui
@@ -32,6 +32,8 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # ------------------------------------------------------
-# reload
+# other
 # ------------------------------------------------------
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+set -g display-panes-time 3000
+set -g mouse on
