--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,3 +37,4 @@ bind -r L resize-pane -R 5
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set -g display-panes-time 3000
 set -g mouse on
+bind m set -g mouse \; display-message "Mouse mode: #{?mouse,on,off}"
