--- a/mise.toml
+++ b/mise.toml
@@ -5,3 +5,10 @@ github-cli = "latest"
 node = "22"
 pnpm = "latest"
 terraform = "latest"
+
+[tasks.brew-install-setup]
+description = "PCの初期化で使う brew のインストール"
+confirm = "OK?"
+run = """
+brew install ag ffmpeg fzf gh git jq pure tmux webp yt-dlp
+"""
