--- a/mise.toml
+++ b/mise.toml
@@ -6,6 +6,14 @@ node = "22"
 pnpm = "latest"
 terraform = "latest"
 
+[tasks.ulid]
+description = "ULID発行"
+run = "npx ulid"
+
+[tasks.uuidv7]
+description = "UUIDv7発行"
+run = "npx uuid v7"
+
 [tasks.brew-install-setup]
 description = "PCの初期化で使う brew のインストール"
 confirm = "OK?"
